Fixed layout bug in logo on promo

--- a/src/organisms/headings/promo/promo.sass
+++ b/src/organisms/headings/promo/promo.sass
@@ -41,14 +41,13 @@ $osg-margin-top-bottom-desktop: 25px
           height: auto
           left: 0
           right: auto
-          object-fit: unset
           position: absolute
           width: auto
           +osg-mq-tablet-and-up
             left: auto
             right: 0
 
-  .osg-figure
+  >.osg-figure
     position: absolute
     top: 0
     left: 0
